syntax = "proto3";
package protobuf;

import "messages/user.proto";
import "google/protobuf/timestamp.proto";

message ChatMsgEvent {
    bytes                     message     = 1;
    string                    from        = 2;
    string                    to          = 3;
    messages.User             user        = 4;
    repeated uint64           emojies     = 5;
    repeated uint64           mentions    = 6;
    google.protobuf.Timestamp created_at  = 7;
}